--- a/css/typography.css
+++ b/css/typography.css
@@ -121,7 +121,7 @@ img.bottom-img { position: absolute; bottom: 0; left: 0; right: 0;  }
 .o-hidden { overflow: hidden; }
 .position-re { position: relative; }
 .full-width{width: 100% !important;}
-section { background: #ffffff; }
+section { opacity: 100%; }
 .shadow { box-shadow: none !important; }
 
 /*******************************************
