--- a/css/style.css
+++ b/css/style.css
@@ -754,14 +754,14 @@ margin-left: -17px; line-height: 50px; }
 .portfolio-title span { display: block; }
 .portfolio-item { width: 100%; position: relative;  overflow: hidden; color: #fff; width: 100%; border: 0; position: relative; }
 .portfolio-item img { width: 100%; -webkit-transition: transform 0.35s; -o-transition: transform 0.35s; -ms-transition: transform 0.35s; -moz-transition: transform 0.35s; transition: transform 0.35s; -webkit-backface-visibility: hidden; -o-backface-visibility: hidden; -ms-backface-visibility: hidden; -moz-backface-visibility: hidden; backface-visibility: hidden;}
-.portfolio-item .portfolio-overlay  { width: 100%; background: #84ba3f; padding: 10px 0px; position: absolute;  bottom:-80px; display: block;  margin-top: 0; float: left; z-index: 9; text-align: left; padding-left: 30px; left: 0;  transition: all 0.5s ease-in-out; -webkit-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out;  -ms-transition: all 0.5s ease-in-out;  -o-transition: all 0.5s ease-in-out; }
+.portfolio-item .portfolio-overlay  { width: 100%; background: #ffda00; padding: 10px 0px; position: absolute;  bottom:-80px; display: block;  margin-top: 0; float: left; z-index: 9; text-align: left; padding-left: 30px; left: 0;  transition: all 0.5s ease-in-out; -webkit-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out;  -ms-transition: all 0.5s ease-in-out;  -o-transition: all 0.5s ease-in-out; }
 .portfolio-item .portfolio-overlay h4 { font-weight: 600; margin-bottom: 5px; }
 .portfolio-item .portfolio-overlay a:hover { color: #323232; }
 .portfolio-item .portfolio-overlay span { font-weight: 400; font-size: 14px; }
 .portfolio-item .portfolio-overlay span a { color: #ffffff; }
 .portfolio-item .portfolio-overlay span a:hover { color: #323232; }
 .portfolio-item a.popup{position: absolute; right: 20px; top: -20px; color: #fff; z-index: 9; display: inline-block; width: 40px; height: 40px; background: #fff; color: #626262; border-radius: 50%; margin-right: 10px; padding-left: 0px; text-align: center; line-height: 40px;  opacity: 0;  transition: all 0.5s ease-in-out; -webkit-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out;  -ms-transition: all 0.5s ease-in-out;  -o-transition: all 0.5s ease-in-out;}
-.portfolio-item a.popup:hover { background: #84ba3f; color: #ffffff; }
+.portfolio-item a.popup:hover { background: #ffda00; color: #ffffff; }
 .portfolio-item:hover img { -webkit-transform:scale(1.20);  -moz-transform:scale(1.20); -ms-transform:scale(1.20);  -o-transform:scale(1.20);  transform:scale(1.20); }
 .portfolio-item:hover a.popup{ opacity: 1; top: 20px; }
 .portfolio-item:before { content: ''; display: inline-block; width: 100%; height: 100%;  position: absolute; top: 0; left: 0; z-index: 1; background-size: 115%;
@@ -2183,6 +2183,11 @@ img.bottom-img { top: 0; }
   margin-left: -60%;
 }
 
+.laravel {
+  margin-left: -50%;
+  margin-top: -5%;
+}
+
 img.bn {
   -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
@@ -2237,4 +2242,8 @@ img.bn:hover {
   right: 0;
   padding: .2rem .25rem;
   min-width: 1rem;
+}
+
+.mtn-10{
+    margin-top: -10%;
 }
