--- a/css/typography.css
+++ b/css/typography.css
@@ -30,14 +30,14 @@ NOTE: This is typography stylesheet of template, This file contains typography o
 /*************************
     General
 *************************/
-body { font-family: 'Poppins', sans-serif; font-weight: normal; font-style: normal; font-size: 14px; color: #626262; }
+body { font-family: 'Montserrat', sans-serif; font-weight: normal; color: #363636; margin-top: 0px;  font-size: 14px; color: #626262; }
 a, .btn  { -webkit-transition: all 0.3s ease-out 0s; -moz-transition: all 0.3s ease-out 0s; -ms-transition: all 0.3s ease-out 0s; -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s; }
 a:focus { text-decoration: none !important; }
 a:focus, a:hover { color: #84ba3f; text-decoration: none !important; }
 a, button, input { outline: medium none !important; color: #fdaa00; }
 .uppercase { text-transform: uppercase; }
-h1, h2, h3, h4, h5, h6 { font-family: 'Montserrat', sans-serif; font-weight: normal; color: #363636; margin-top: 0px; }
+h1, h2, h3, h4, h5, h6 { font-family: trumpgothicpro, sans-serif; font-style: normal; font-weight: 400;}
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: inherit; }
 label { font-weight: normal; }
 
