--- a/css/shortcodes/testimonial.css
+++ b/css/shortcodes/testimonial.css
@@ -14,7 +14,7 @@ NOTE: This file contains testimonial CSS.
 .testimonial-avatar img{border:4px solid #ffda00; max-width:100%; border-radius: 50%;}
 
 .testimonial-info{position: relative;}
-.testimonial-info:before{position:absolute; top:-15px; left:-35px; color:#ffda00; content: "\201C"; font-family: Georgia, serif; font-size:100px;}
+.testimonial-info:before{position:absolute; top:-15px; left:-35px; color:#ffda00; content: "\201C"; font-family: 'Playfair Display', serif; font-size:100px;}
 
 .author-info{font-size:16px; color:#323232; text-transform:uppercase; margin-top:20px; position:relative;}
 .author-info strong{font-weight:500;}
