--- a/css/typography.css
+++ b/css/typography.css
@@ -34,7 +34,7 @@ body { font-family: 'Montserrat', sans-serif; font-weight: normal; color: #36363
 a, .btn  { -webkit-transition: all 0.3s ease-out 0s; -moz-transition: all 0.3s ease-out 0s; -ms-transition: all 0.3s ease-out 0s; -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s; }
 a:focus { text-decoration: none !important; }
-a:focus, a:hover { color: #84ba3f; text-decoration: none !important; }
+a:focus, a:hover { color: #ffda00; text-decoration: none !important; }
 a, button, input { outline: medium none !important; color: #fdaa00; }
 .uppercase { text-transform: uppercase; }
 h1, h2, h3, h4, h5, h6 { font-family: trumpgothicpro, sans-serif; font-style: normal; font-weight: 400;}
@@ -73,8 +73,8 @@ p { font-weight: normal; line-height: 1.5; color: #626262; }
 hr { margin: 0; padding: 0px; border-bottom:1px dashed #eceff8; border-top: 0px; }
 hr.light { margin: 0; padding: 0px; border-bottom:1px solid rgba(255,255,255,0.1); border-top: 0px; }
 
-*::-moz-selection { background: #84ba3f; color: #fff; text-shadow: none; }
-::-moz-selection { background: #84ba3f; color: #fff; text-shadow: none; }
+*::-moz-selection { background: #ffda00; color: #fff; text-shadow: none; }
+::-moz-selection { background: #ffda00; color: #fff; text-shadow: none; }
 ::selection { background: #fdaa00; color: #fff; text-shadow: none; }
 
 /***************************
