--- a/css/shortcodes/page-title.css
+++ b/css/shortcodes/page-title.css
@@ -16,10 +16,10 @@ NOTE: This file contains Page Title CSS.
 .page-title h1 { text-transform: capitalize; color: #ffffff; font-weight: 600; }
 .page-title p { font-size: 18px; color: #ffffff; }
 .page-title .page-title-name { display: inline-block; width: 60%; }
-.page-title .page-breadcrumb { float: right; width: 40%; text-align: right; }
+.page-title .page-breadcrumb { float: left; width: 100%; text-align: left; }
 ul.page-breadcrumb li span {  color: #fff; font-size: 14px; text-transform: capitalize; }
 ul.page-breadcrumb { padding-top: 30px; }
-ul.page-breadcrumb li { color: #fff; display: inline-block; list-style: none; }
+ul.page-breadcrumb li { color: gray; display: inline-block; list-style: none; }
 ul.page-breadcrumb li i { font-size: 14px; padding: 0 7px;} 
 ul.page-breadcrumb li a { color: #fff; font-size: 14px; text-transform: capitalize; }
 ul.page-breadcrumb li a:hover {  color: #84ba3f; }
